# android-spatialite

./: README.md  gradle.properties  settings.gradle
android-spatialite/: build.gradle
android-spatialite/src/main/jni/: CMakeLists.txt
android-spatialite/src/main/jni/geos/: CMakeLists.txt
android-spatialite/src/main/jni/geos/include/geos/: version.h
android-spatialite/src/main/jni/iconv/: CMakeLists.txt
android-spatialite/src/main/jni/libspatialite/: CMakeLists.txt  Makefile  config.h  fakeconfig.h  libtool
android-spatialite/src/main/jni/libspatialite/examples/: Makefile
android-spatialite/src/main/jni/libspatialite/src/connection_cache/generator/: Makefile
android-spatialite/src/main/jni/libspatialite/src/control_points/: Makefile
android-spatialite/src/main/jni/libspatialite/src/cutter/: Makefile
android-spatialite/src/main/jni/libspatialite/src/dxf/: Makefile
android-spatialite/src/main/jni/libspatialite/src/gaiaexif/: Makefile
android-spatialite/src/main/jni/libspatialite/src/gaiageo/: Makefile
android-spatialite/src/main/jni/libspatialite/src/gaiageo/lemon/: Makefile
android-spatialite/src/main/jni/libspatialite/src/gaiageo/lemon/lemon_src/: Makefile
android-spatialite/src/main/jni/libspatialite/src/geopackage/: Makefile
android-spatialite/src/main/jni/libspatialite/src/headers/: Makefile
android-spatialite/src/main/jni/libspatialite/src/headers/spatialite/: gaiaconfig-msvc.h
android-spatialite/src/main/jni/libspatialite/src/md5/: Makefile
android-spatialite/src/main/jni/libspatialite/src/shapefiles/: Makefile
android-spatialite/src/main/jni/libspatialite/src/srsinit/: Makefile
android-spatialite/src/main/jni/libspatialite/src/srsinit/epsg_update/: Makefile
android-spatialite/src/main/jni/libspatialite/test/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_bufoptsnew_tests/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_cache_tests/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_geos3100_tests/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_geos3110_tests/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_geos_3100/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_geos_3120/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_geos_380/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_geos_390/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_geos_non3110/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_geos_non3120/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_geos_non390/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_geos_tests/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_geosadvanced_tests/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_gpkg_epsg600_tests/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_libxml2_tests/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_logfile_tests/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_minizip/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_nocache_tests/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_point_geom/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_postgres_tests/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_proj910_tests/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_proj_tests/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_rtgeom_non390/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_rtgeom_tests/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_rttopo_tests/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_security_tests/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_tests/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_tiny_point/: Makefile
android-spatialite/src/main/jni/libspatialite/test/sql_stmt_zip_proj6/: Makefile
android-spatialite/src/main/jni/proj/src/iso19111/: io.cpp
android-spatialite/src/main/jni/rttopo/: CMakeLists.txt
android-spatialite/src/main/jni/rttopo/headers/: Makefile  Makefile.in
android-spatialite/src/main/jni/rttopo/src/: Makefile  Makefile.in  rttopo_config.h
android-spatialite/src/main/jni/sqlite3/: CMakeLists.txt  android_database_CursorWindow.cpp  android_database_SQLiteConnection.cpp  android_database_SQLiteDebug.cpp  android_database_SQLiteFunction.cpp  android_database_SQLiteGlobal.cpp
sqlite-android/: build.gradle
sqlite-android/src/main/jni/: CMakeLists.txt
sqlite-android/src/main/jni/libspatialite/: config.status  spatialite.pc
sqlite-android/src/main/jni/libspatialite/src/: Makefile
sqlite-android/src/main/jni/libspatialite/src/connection_cache/: Makefile
sqlite-android/src/main/jni/libspatialite/src/gaiaaux/: Makefile
sqlite-android/src/main/jni/libspatialite/src/spatialite/: Makefile
sqlite-android/src/main/jni/libspatialite/src/stored_procedures/: Makefile
sqlite-android/src/main/jni/libspatialite/src/topology/: Makefile
sqlite-android/src/main/jni/libspatialite/src/virtualtext/: Makefile
sqlite-android/src/main/jni/libspatialite/src/wfs/: Makefile
sqlite-android/src/main/jni/libspatialite/test/sql_stmt_bufoptsold_tests/: Makefile
sqlite-android/src/main/jni/libspatialite/test/sql_stmt_freexl_tests/: Makefile
sqlite-android/src/main/jni/libspatialite/test/sql_stmt_geopackage_tests/: Makefile
sqlite-android/src/main/jni/libspatialite/test/sql_stmt_geos370_tests/: Makefile
sqlite-android/src/main/jni/proj/: CMakeLists.txt
sqlite-android/src/main/jni/proj/src/: proj_config.h
sqlite-android/src/main/jni/sqlite3/: JNIHelp.cpp  android_database_SQLiteConnection.cpp
(+59 files in other folders)
